--- a/Menu.html
+++ b/Menu.html
@@ -29,7 +29,7 @@
     </div>
     <div class="section">
       <div class="logo">         <!--Logo-->
-        <a class="a" href="Menu.html"><p class="transparent-text">OutFit|Store</p></a>
+        <a class="a" href="Menu.html"><p class="transparent-text">OutFit|Store test</p></a>
       </div>
     </div>
     <div class="section">
