--- a/Menu.html
+++ b/Menu.html
@@ -137,15 +137,12 @@ $('.totop').click(function(e){
 });
 </script>
 <script>
-$(document).on("scroll", window, function () {
-    if ($(window).scrollTop()>200) 
-    {
-        $(".scroll").show();
-    }
-    else
-    {
-        $(".scroll").hide();
-    }
-    });
+$(window).scroll(function(e) {
+   if($(window).scrollTop()>=200) {
+     $('div.scroll').fadeIn(200);
+   } else {
+     $('div.scroll').fadeOut(200);
+   }
+});
 </script>
 </body>
