--- a/Product.html
+++ b/Product.html
@@ -56,6 +56,7 @@
      <div class="col-5">
       <div class="product-info">
         <h2>Футболка | Cry Baby </h2>
+        <p>649грн. <del>700грн.</del></p>
       </div>
      </div>
     </div>
