--- a/Product.html
+++ b/Product.html
@@ -48,15 +48,27 @@
          <img src="Image/CryBabyGreen.png">
       </div>
     </div>
-     <div class="col-4">
+     <div class="col-5">
        <div class="m-image">
         <img src="Image/CryBabyGreen.png">
        </div>
      </div>
-     <div class="col-5">
+     <div class="col-4">
       <div class="product-info">
         <h2>Футболка | Cry Baby </h2>
         <p>649грн. <del>700грн.</del></p>
+        <hr class="hr-line">
+        <div class="product-size">
+          <span class="product-size-button">XS</span>
+          <span class="product-size-button">S</span>
+          <span class="product-size-button">M</span>
+          <span class="product-size-button">L</span>
+          <span class="product-size-button">XL</span>
+          <span class="product-size-button">2XL</span>
+        </div>
+        <p>Выберети Размер</p>
+        <hr class="hr-line">
+        <button></button>
       </div>
      </div>
     </div>
