git push origin master

--- a/Menu.html
+++ b/Menu.html
@@ -77,21 +77,21 @@
       <div class="row">
     <div class="col-4">                <!--First item -->
       <img class="zoom-img" src="Image/Mask.png">
-    <div class="product-info">
+    <div class="product">
       <p class="name">Футболка | Mask</p>
       <p class="price">520 грн.</p>
     </div>
     </div>
     <div class="col-4">
       <img class="zoom-img" src="Image/Crahs.png">      <!--Second item -->
-      <div class="product-info">
+      <div class="product">
         <p class="name">Футболка | Crash</p>
         <p class="price">649 грн. <del>700 грн.</del></p>
       </div>
     </div>
       <div class="col-4">
         <img class="zoom-img" src="Image/Tosia.png">    <!--Third item -->
-    <div class="product-info">
+    <div class="product">
       <p class="name">Футболка | Tosia</p>
       <p class="price">400 грн.</p>
     </div>
