--- a/Product.html
+++ b/Product.html
@@ -59,12 +59,12 @@
         <p>649грн. <del>700грн.</del></p>
         <hr class="hr-line">
         <div class="product-size">
-          <span class="product-size-button">XS</span>
-          <span class="product-size-button">S</span>
-          <span class="product-size-button">M</span>
-          <span class="product-size-button">L</span>
-          <span class="product-size-button">XL</span>
-          <span class="product-size-button">2XL</span>
+          <div class="product-size-button">XS</div>
+          <div class="product-size-button">S</div>
+          <div class="product-size-button">M</div>
+          <div class="product-size-button">L</div>
+          <div class="product-size-button">XL</div>
+          <div class="product-size-button">2XL</div>
         </div>
         <p>Выберети Размер</p>
         <hr class="hr-line">
