--- a/Product.html
+++ b/Product.html
@@ -51,13 +51,14 @@
      <div class="col-5">
        <div class="m-image">
         <img src="Image/CryBabyGreen.png">
-       </div>
+      </div>
      </div>
      <div class="col-4">
       <div class="product-info">
         <h2>Футболка | Cry Baby </h2>
         <p>649грн. <del>700грн.</del></p>
         <hr class="hr-line">
+        <p>Выберети Размер</p>
         <div class="product-size">
           <div class="product-size-button">XS</div>
           <div class="product-size-button">S</div>
@@ -66,12 +67,13 @@
           <div class="product-size-button">XL</div>
           <div class="product-size-button">2XL</div>
         </div>
-        <p>Выберети Размер</p>
         <hr class="hr-line">
-        <button></button>
+        <a  class="buy-button" type="sumbit" href="https://github.com/bogdofreewoman/first_shop">
+          <i class="fa-solid fa-cart-arrow-down"></i>Купить</a>
       </div>
      </div>
     </div>
+    <hr class="hr-line">
  </div>
  <footer class="footer">
     <div class="footer-left">    
