--- a/Product.html
+++ b/Product.html
@@ -68,11 +68,20 @@
           <div class="product-size-button">2XL</div>
         </div>
         <hr class="hr-line">
+      <div class="buy-box">
         <a  class="buy-button" type="sumbit" href="https://github.com/bogdofreewoman/first_shop">
           <i class="fa-solid fa-cart-arrow-down"></i>Купить</a>
-      </div>
+        </div>
+      </div class="anothers-colors">
+        <p></p>
      </div>
     </div>
+    <hr class="hr-line">
+    <h4>Описание</h4>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
     <hr class="hr-line">
  </div>
  <footer class="footer">
@@ -96,5 +105,7 @@
         $("#main").css("margin-left","0");
       }
     }  
+  </script>
+  <script>
   </script>
   </body>
